lazyload scripts at the bottom

--- a/app/views/home/includes/_founders.erb
+++ b/app/views/home/includes/_founders.erb
@@ -12,7 +12,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div><!-- end of profile_pic -->
     <div class="pr-details">
       <div class="p-name">Levent Baş</div>
       <div class="p-title">Genel Proje Direktörü</div>
