--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,89 +18,9 @@
         </div>
     </div><!-- end of .media-container -->
 
-    <div class="security-social line">
-      <div class="security size1of2">
-        <h1>%100 Güvenli Ödeme Sistemi</h1>
-        <h3>BenVarım Platformu üzerinden yapılan bağışlar
-        %100 güvenli ödeme sistemi Paypal* ile kurumların
-        banka hesaplarına anında yatırılır.</h3>
-        <div class="security-icons">
-          <img src="/images/cards/paypal_64.png" />
-          <img src="/images/cards/american_express_64.png" />
-          <img src="/images/cards/visa_64.png" />
-          <img src="/images/cards/mastercard_64.png" />
-        </div>
-        <div class="ss-note">
-          <small>* PayPal uluslararası para transferi hizmeti sunan, 100 milyondan fazla kullanıcıya sahip ve dünya çapında kendini kanıtlamış bir ödeme sistemidir. Türkiye’de Nisan 2011’den itibaren Türkiye PayPal Direktörlüğü bulunmaktadır ve Türk Lirası ile işlem yapılabilir. <a href="http://www.paypal.com.tr" target="_blank">http://www.paypal.com.tr</a></small>
-        </div>
-      </div>
-      <div class="social line size1of2 lastUnit">
-        <div class="widget widget-dark">
-          <div class="w-inner">
-            <h3>Bizi Twitter ve Facebook'ta takip edin!</h3>
-            <div class="line">
-              <div class="f-twitter size1of2">
-
-                <script src="http://widgets.twimg.com/j/2/widget.js"></script>
-                <script>
-                new TWTR.Widget({
-                  version: 2,
-                  type: 'profile',
-                  rpp: 6,
-                  interval: 5000,
-                  width: 210,
-                  height: 207,
-                  theme: {
-                    shell: {
-                      background: '#adcff4',
-                      color: '#0862a2'
-                    },
-                    tweets: {
-                      background: '#cde5ff',
-                      color: '#444444',
-                      links: '#0862a2'
-                    }
-                  },
-                  features: {
-                    scrollbar: false,
-                    loop: false,
-                    live: true,
-                    hashtags: true,
-                    timestamp: true,
-                    avatars: false,
-                    behavior: 'default'
-                  }
-                }).render().setUser('Ben_Varim').start();
-                </script>
-
-              </div>
-              <div class="f-facebook size1of2 lastUnit">
-                <div id="fb-root"></div>
-                <script>(function(d, s, id) {
-                  var js, fjs = d.getElementsByTagName(s)[0];
-                  if (d.getElementById(id)) {return;}
-                  js = d.createElement(s); js.id = id;
-                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-                  fjs.parentNode.insertBefore(js, fjs);
-                }(document, 'script', 'facebook-jssdk'));</script>
-
-                <div class="fb-like-box" data-href="http://www.facebook.com/benvarim.platformu" data-width="210" data-show-faces="true" data-border-color="#FFF" data-stream="false" data-header="false"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="footer-dynamic">
     </div>
 
-
-    <div class="f-newsletter line">
-      <div class="size2of3 fn-label">
-        BenVarım’daki yeniliklerden haberdar olmak için aylık bültenimize kaydolun:
-      </div>
-      <div class="size1of3">
-        <%= render 'layouts/mailchimp'%>
-      </div>
-    </div>
 
     <div class="f-bottom line">
       <div class="size1of3">
