--- a/app/views/projects/_list_projects.html.erb
+++ b/app/views/projects/_list_projects.html.erb
@@ -2,7 +2,7 @@
   <div class="w-inner clearfix">
     <div class="w-content">
       <div class="w-title">Destekleyebileceğiniz projeler</div>
-      <div class="rows-container" id="donation-pages-container">
+      <div class="rows-container clearfix" id="donation-pages-container">
         <%
         org_ids = []
         %>
