--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -41,7 +41,7 @@
             <div class="line">
               <div class="f-twitter size1of2">
                 <!-- we need to defer this widget, slows down the site js because site JS waits for this one to load :/-->
-                <!-- <script src="http://widgets.twimg.com/j/2/widget.js"></script>
+                <script src="http://widgets.twimg.com/j/2/widget.js"></script>
                 <script>
                 if (window.TWTR) {
                   new TWTR.Widget({
@@ -73,7 +73,7 @@
                     }
                   }).render().setUser('Ben_Varim').start();
                 }
-                </script> -->
+                </script>
 
               </div>
               <div class="f-facebook size1of2 lastUnit">
