fixes email copy

--- a/app/views/email_layouts/_footer.html.erb
+++ b/app/views/email_layouts/_footer.html.erb
@@ -59,7 +59,7 @@
 		</tr>
 <tr style="border-collapse: collapse;">
 <td width="640" height="60" class="w640" style="text-align: center; font-size: 13px; width: 300px !important; border-collapse: collapse;" align="center">
-	      <a href="http://benvarim.com" target="_blank" style="color: #0862a2;">http://benvarim.com</a><br style="line-height: 100%;"><p>Daha iyi yarınlar yaratmak adına gösterdiğiniz çaba için teşekkür ederiz.</p>
+	      <a href="http://benvarim.com" target="_blank" style="color: #0862a2;">http://benvarim.com</a><br style="line-height: 100%;"><p>Daha iyi yarınlar yaratmak adına gösterdiğin çaba için teşekkür ederiz.</p>
 	      <p><a href="http://benvarim.com/guvenli_odeme" target="_blank" style="color: #0862a2;">%100 Güvenli Ödeme Sistemi</a> | <a href="http://benvarim.com/sik_sorulan_sorular" target="_blank" style="color: #0862a2;">Sık sorulan sorular</a> | <a href="http://benvarim.com/gizlilik_politikasi" target="_blank" style="color: #0862a2;">Gizlilik Politikası</a> | <a href="http://benvarim.com/iletisim/yeni" target="_blank" style="color: #0862a2;">Bize ulaşın</a></p>
         <p><br style="line-height: 100%;"></p>
 	    </td>
