--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1357,7 +1357,7 @@ blockquote span.quotation{
   /*
   ** Form Elements
   */
-  .field { margin-bottom:15px; clear:both; min-height: 38px;}
+  .field { margin-bottom:15px; clear:both; min-height: 28px;}
 
 
   .field input,
@@ -1398,8 +1398,8 @@ blockquote span.quotation{
     display:block;
     float:left;
     font-weight:bold;
-    line-height:38px;
-    height:38px;
+    line-height: 28px;
+    height: 28px;
     margin-bottom:0;
     text-transform:capitalize;
     width:120px;
@@ -1418,6 +1418,47 @@ blockquote span.quotation{
     opacity: 1 !important;
     float:left;
     width: 20px;   }
+
+
+
+  .radio-group{
+    list-style: none;
+    display: inline-block;
+    margin: 0;
+  }
+  .radio-group li {
+    display: block;
+    clear: both;
+    margin-bottom: 5px;
+    line-height: 20px;
+    height: 20px;
+  }
+  .radio-group input[type=radio] {
+    float: left;
+    display: inline-block;
+    width: auto;
+    margin-right: 8px;
+    vertical-align: middle;
+
+  }
+  .radio-group label {
+    font-weight: normal;
+    display: inline-block;
+    line-height: 18px;
+    height: 18px;
+    margin-bottom: 0;
+    width: auto;
+  }
+
+  .radio-group .other .text-field {
+    width: 80px !important;
+  }
+
+
+
+
+
+
 
 
   .actions{
