implements post bagis trigger

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -31,19 +31,7 @@
         <div class="comment-bubble rc clearfix">
           <h1><%= @page.title %></h1>
           <h6><%= @page.user.name%></h6>
-<div id="fb-root"></div>
-          <div class="share-options">
-            <ul class="clearfix">
-              <li><a href="http://twitter.com/share?via=ben_varim" class="twitter-share-button" data-count="horizontal" data-text="<%= @page.title %>">Tweet</a></li>
-              <li style="margin-right: 10px"><span  class='st_email_hcount' displayText='Email'></span></li>
-              <li style="width:60px; margin-right: 10px"><g:plusone size="medium"></g:plusone></li>
-              <% if @show_fb_like_send %>
-                <li><fb:like send="true" layout="button_count" width="165" show_faces="false" href="<%=url_for :only_path => false%>#fb"></fb:like></li>
-              <% else %>
-                <li><a  target="_blank" name="fb_share" type="button_count">Facebook'ta Paylaş</a></li>
-              <% end %>
-            </ul>
-          </div>
+          <%= render 'pages/share_options'%>
         </div><!-- .comment-bubble -->
 
 
@@ -168,50 +156,13 @@
   <div class="dialog" id="dialog-postbagis" title="Teşekkürler!">
     <div class="d-header">
       <div class="dh-title">
-        Bağışınız kuruma güvenli bir şekilde ulaşmıştır. Daha fazla destek toplamak için lütfen sevdiklerinle paylaşmayı ihmal etme.
+        Bağışınız kuruma güvenli bir şekilde ulaşmıştır. Daha fazla destek olmak için lütfen sevdiklerinizle paylaşın!
       </div>
-
-      <p class="small"><%= image_tag @page.organization.logo.url(:thumb) %> <%=@page.organization.description[0..200]%>... <%= link_to "devamı »", @page.organization%></p>
-
     </div><!-- .d-header -->
 
-    <div class="d-content">
+    <div class="d-content ">
 
-
-      <div id="fb-root"></div>
-      <script>
-        window.fbAsyncInit = function() {
-          FB.init({
-            appId      : '116309391796241',
-            status     : true,
-            cookie     : true,
-            xfbml      : true
-          });
-
-          FB.ui({ method: 'feed',
-              message: 'Facebook for Websites is super-cool'});
-        };
-
-        (function(d){
-           var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
-           js = d.createElement('script'); js.id = id; js.async = true;
-           js.src = "//connect.facebook.net/en_US/all.js";
-           d.getElementsByTagName('head')[0].appendChild(js);
-         }(document));
-      </script>
-
-
-            <a href="http://twitter.com/share?via=ben_varim" class="twitter-share-button" data-count="horizontal" data-text="<%= @page.title %>">Tweet</a>
-
-
-            <span  class='st_email_hcount' displayText='Email'></span>
-
-
-            <g:plusone size="large"></g:plusone>
-
-
-            <fb:like send="true" layout="button_count" width="165" show_faces="false" href="<%=url_for :only_path => false%>#fb"></fb:like>
-
+      <%= render 'pages/share_options'%>
 
     </div><!-- .d-content -->
 
@@ -220,66 +171,11 @@
   </div><!-- .d-dialog -->
 
   <% captured = capture do %>
-  <script>
-
-  // FB.ui(
-  //    {
-  //      method: 'feed',
-  //      name: 'Facebook Dialogs',
-  //      link: 'http://benvarim.com/',
-  //      picture: 'http://benvarim.com/f8.jpg',
-  //      caption: 'Reference Documentation',
-  //      description: 'Dialogs provide a simple, consistent interface for applications to interface with users.',
-  //      message: 'Facebook Dialogs are easy!'
-  //    },
-  //    function(response) {
-  //      if (response && response.post_id) {
-  //        alert('Post was published.');
-  //      } else {
-  //        alert('Post was not published.');
-  //      }
-  //    }
-  //  );
-
-      //
-      // FB.ui({
-      //    method: 'permissions.request',
-      //    'perms': 'user_birthday,user_relationship_details,read_stream',
-      //    'display': 'iframe'
-      //   },
-      //   function(response) {
-      //     // check response.perms that it has all the required permissions...  if so, continue to next page.
-      //     // TODO should be a better way to do this since UI checks perms
-      //
-      //     if (response.perms != null && isSetProperSubset(permissions.split(","), response.perms.split(","))) {
-      //       top.location.href = "http://apps.facebook.com/fbdevwiki/"+nextUrl;
-      //     }
-      //   }
-      // );
-      //
-      // function isSetProperSubset(subset, superset) {
-      //   // first check lengths
-      //   if (subset.length > superset.length) {
-      //     return false;
-      //   }
-      //
-      //   var lookup = {};
-      //
-      //   for (var j in superset) {
-      //     lookup[superset[j]] = superset[j];
-      //   }
-      //
-      //   for (var i in subset) {
-      //     if (typeof lookup[subset[i]] == 'undefined') {
-      //       return false;
-      //     }
-      //   }
-      //   return true;
-      // }
-
-
+  <script type="text/javascript">
   $(document).ready(function(){
-      $("#dialog-postbagis").dialog('open');
+      var $dialog = $("#dialog-postbagis");
+      $dialog.dialog( "option", "width", 500 );
+      $dialog.dialog('open');
   });
   </script>
   <% end %>
