--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1737,6 +1737,16 @@ blockquote span.quotation{
     }
 
 
+    .dialog .share-options {
+      padding: 10px;
+      border: 1px solid #CDE5FF;
+      background: #EBF4FF;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+      border-radius: 5px;
+    }
+
+
     /*
     ** Progress Bar
     */
@@ -2509,6 +2519,35 @@ blockquote span.quotation{
     font-size: 14px;
     margin: 20px 0 10px;
 }
+
+
+
+
+
+
+
+
+/*
+ * Dialogs
+ *
+ */
+
+#dialog-postbagis {
+
+}
+
+.organization-fundraiser-details {
+  clear: both;
+  margin-top: 30px;
+}
+
+.organization-fundraiser-details img {
+  max-width: 150px;
+  float: left;
+}
+
+
+
 
 
 
